# NppVim

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Cargo.toml  LICENSE  Readme.md  build.bat  build.ps1  build.rs  tutor.txt
.cargo/: config.toml
.github/workflows/: release.yml
docs/: How.md  help.md  help.txt  nppvim.rc
include/: CommandMode.h  ConfigManager.h  Keymap.h  MappingManager.h  Marks.h  Motion.h  NormalMode.h  NppVim.h  OptionRegistry.h  RcParser.h  TextObject.h  Utils.h  VisualMode.h
plugin/: NppVim.rc  RCa13428  RDa13428  menuCmdID.h  resource.h
src/: CommandMode.cpp  ConfigManager.cpp  Keymap.cpp  MappingManager.cpp  Marks.cpp  Motion.cpp  Motion.h  NormalMode.cpp  NppVim.cpp  NppVim.h  NppVim.rc  Operation.cpp  Operation.h  OptionRegistry.cpp  PluginDefinition.h  RcParser.cpp  Scintilla.h  TextObject.cpp  TextObjects.cpp  TextObjects.h  Utils.cpp  VisualMode.cpp  lib.rs  resource.h
src/DockingFeature/: DockingDlgInterface.h
src/plugin/: Notepad_plus_msgs.h  NppVim.rc  PluginInterface.h  menu_cmd_id.rs  mod.rs  notepad_plus_msgs.rs  plugin_interface.rs  sci_position.rs  scintilla.rs
vs.proj/: NppVim.sln  NppVim.vcxproj  build.bat
vs.proj/NppVim/x64/Debug/: NppVim.dll.recipe  NppVim.res  RCa02536  vc143.idb
vs.proj/NppVim/x64/Debug/NppVim.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NppVim.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
